# gss-project

./: .gitignore  gitlab_daily_report.py  middleware.ts  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  scrape_gss.py  tailwind.config.ts
.github/workflows/: scrape.yml
.kiro/specs/daily-report-system/: design.md  requirements.md  tasks.md
app/: globals.css  layout.tsx  page.tsx
app/(protected)/: layout.tsx
app/actions/: auth.ts
app/login/: page.tsx
components/: auth-provider.tsx  employee-detail-modal.tsx  enhanced-home.tsx  home.tsx  login.tsx
components/employees/: employee-list.tsx  employee-search.tsx
components/layout/: main-layout.tsx  navigation.tsx  theme-toggle.tsx
components/router/: app-router.tsx  route-guard.tsx
components/ui/: avatar.tsx  calendar.tsx  chart.tsx  loading-spinner.tsx  resizable.tsx  searchable-select.tsx
components/work-order/: work-order-form.tsx  work-order-response.tsx
lib/: api-config.ts  auth.ts  errors.ts  fontawesome.ts  gss-api.ts  router.ts  security-config.ts  security-validator.ts  supabase.ts  theme-provider.tsx  work-order-client.ts  work-order-list-client.ts
lib/__tests__/: security.test.ts
lib/schemas/: work-order.ts
lib/types/: work-order-list.ts
pages/: employee-statistics-page.tsx  employees-page.tsx  work-order-list-page.tsx  work-order-page.tsx
sql/: 20250903_initial.sql  20260117_add_fields_to_gss_employees.sql  20260118_add_terminated_at.sql
styles/: custom.css  design-system.css
work-report/: app.js  index.html  style.css
(+5 files in other folders)
