[project]
name = "gss-member"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
# 明确指定不打包任何 Python 包（因为这只是一个脚本项目）
py-modules = []

[tool.setuptools.packages.find]
# 排除前端和其他非 Python 包目录
exclude = [
    "app*",
    "pages*",
    "components*",
    "hooks*",
    "styles*",
    "lib*",
    "sql*",
    "public*",
    "node_modules*",
    ".next*",
]
